--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- ===== Navbar ===== -->
     <nav>
         <div class="logo">
-            <img src="/images/corex-logo.png" alt="CoreX Logo" class="logo-icon">
+            <img src="images/corex-logo.png" alt="CoreX Logo" class="logo-icon">
             <h2> CoreX</h2>
         </div>
 
@@ -117,5 +117,6 @@
     </footer>
 
 </body>
+
 
 </html>
