--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <!-- ===== Navbar ===== -->
     <nav>
         <div class="logo">
-            <img src="./images/corex-logo.png" alt="CoreX Logo" class="logo-icon">
+            <img src="corex-logo.png" alt="CoreX Logo" class="logo-icon">
             <h2> CoreX</h2>
         </div>
 
         <ul class="nav-links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./shop.html">Shop</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
         </ul>
         <a href="/shop.html" class="cta-nav">
     Shop Now <span class="arrow">→</span>
@@ -120,4 +120,5 @@
 
 
 </html>
+
 
