--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
         </ul>
-        <a href="/shop.html" class="cta-nav">
+        <a href="shop.html" class="cta-nav">
     Shop Now <span class="arrow">→</span>
   </a>
     </nav>
@@ -120,5 +120,6 @@
 
 
 </html>
+
 
 
