--- a/product.html
+++ b/product.html
@@ -21,8 +21,8 @@
             </div>
 
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/shop.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
@@ -67,5 +67,6 @@
                     <p>© 2025 coreX – All Rights Reserved</p>
                 </footer>
 </body>
+
 
 </html>
