--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Accessoires DZ – Shop</title>
+    <title>CoreX – Shop</title>
     <link rel="stylesheet" href="style.css" />
 
     <script defer src="products.js"></script>
@@ -16,13 +16,13 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/corex-logo.png" alt="CoreX Logo" class="logo-icon">
+                <img src="corex-logo.png" alt="CoreX Logo" class="logo-icon">
                 <h2> CoreX</h2>
             </div>
 
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/shop.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
         <div class="shop-container">
             <!-- Product 1 -->
             <div class="product-card">
-                <img src="/images/headset.png" alt="Gaming Headset Pro RGB" />
+                <img src="headset.png" alt="Gaming Headset Pro RGB" />
                 <h3>Gaming Headset Pro RGB</h3>
                 <p>$89.99</p>
                 <a href="product.html?id=headset" class="cta-nav">View Details / Order</a>
@@ -57,16 +57,7 @@
 
             <!-- Product 1 -->
             <div class="product-card">
-                <img src="/images/headset.png" alt="Gaming Headset Pro RGB" />
-                <h3>Gaming Headset Pro RGB</h3>
-                <p>$89.99</p>
-                <a href="product.html?id=headset" class="cta-nav">View Details / Order</a>
-            </div>
-
-
-            <!-- Product 1 -->
-            <div class="product-card">
-                <img src="/images/headset.png" alt="Gaming Headset Pro RGB" />
+                <img src="headset.png" alt="Gaming Headset Pro RGB" />
                 <h3>Gaming Headset Pro RGB</h3>
                 <p>$89.99</p>
                 <a href="product.html?id=headset" class="cta-nav">View Details / Order</a>
@@ -75,7 +66,16 @@
 
             <!-- Product 1 -->
             <div class="product-card">
-                <img src="/images/headset.png" alt="Gaming Headset Pro RGB" />
+                <img src="headset.png" alt="Gaming Headset Pro RGB" />
+                <h3>Gaming Headset Pro RGB</h3>
+                <p>$89.99</p>
+                <a href="product.html?id=headset" class="cta-nav">View Details / Order</a>
+            </div>
+
+
+            <!-- Product 1 -->
+            <div class="product-card">
+                <img src="headset.png" alt="Gaming Headset Pro RGB" />
                 <h3>Gaming Headset Pro RGB</h3>
                 <p>$89.99</p>
                 <a href="product.html?id=headset" class="cta-nav">View Details / Order</a>
@@ -88,5 +88,6 @@
         <p>© 2025 Tech Accessoires DZ – All Rights Reserved</p>
     </footer>
 </body>
+
 
 </html>
