--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Details – Tech Accessoires DZ</title>
+    <title>Product Details – CoreX</title>
     <link rel="stylesheet" href="product.css" />
 
     <script defer src="products.js"></script>
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/images/corex-logo.png" alt="CoreX Logo" class="logo-icon">
+                <img src="corex-logo.png" alt="CoreX Logo" class="logo-icon">
                 <h2> CoreX</h2>
             </div>
 
@@ -70,3 +70,4 @@
 
 
 </html>
+
